--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --color-Desaturated-Dark-Cyan: hsl(180, 29%, 50%);
+  --color-Desaturated-Dark-Cyan: rgb(91, 164, 164);
   --color-Light-Grayish-Cyan-Background: hsl(180, 52%, 96%);
   --color-Light-Grayish-Cyan-Filter-Tablets: hsl(180, 31%, 95%);
   --color-Dark-Grayish-Cyan: hsl(180, 8%, 52%);
@@ -10,6 +10,15 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+}
+
+.myBox {
+  box-shadow: rgba(91, 164, 164, 0.3) 0px 10px 15px -3px,
+    rgba(91, 164, 164, 0.1) 0px 4px 6px -2px;
+}
+
+body {
+  background-color: hsl(180, 52%, 96%);
 }
 
 @theme {
